--- a/gb/22/8/22/n13807345.md
+++ b/gb/22/8/22/n13807345.md
@@ -1,19 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【未解之谜】不存在的网红餐厅</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/08/id13807749-1200x800-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/08/id13807749-1200x800-600x400.jpg" />///image2=```diff
+- 伦敦网红餐厅靠卖“心情”，开业半年登上了伦敦餐馆排行榜榜首。怪异的是，谁也不知道餐厅到底在哪！“幽灵餐厅”的背后是什么？（《未解之谜》提供）
+```
 <h6>伦敦网红餐厅靠卖“心情”，开业半年登上了伦敦餐馆排行榜榜首。怪异的是，谁也不知道餐厅到底在哪！“幽灵餐厅”的背后是什么？（《未解之谜》提供）
 </h6>
 <hr>
-<p>大家好，我是扶摇。欢迎和我一起探索<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>。</p>
-<p>今天先来给大家介绍一间神奇的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BD%91%E7%BA%A2%E9%A4%90%E5%8E%85.md#1">网红餐厅</a>，位于英国伦敦，名不见经传，却在开业短短半年后就登上了伦敦餐馆排行榜榜首之位。窜升速度之快，令人咂舌。而更令人不可思议的是，这间全伦敦最好的餐厅其实根本不存在。这是怎么回事呢？</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BD%91%E7%BA%A2%E9%A4%90%E5%8E%85.md#1">网红餐厅</a>养成记</h2>
-<p>餐厅主人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%B4%E7%89%B9%E5%8B%92.md#1">巴特勒</a>（Oobah Butler）是位自由作家，不过严格说来，是位网络写手，从事撰写假评论的工作。他称自己这份工作是“看着菜单，选个食物，然后开始撒谎”。可能因为文笔不错吧，每篇评论能为他赚取10英镑左右的收入，相当不错。</p>
-<p>不过<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%B4%E7%89%B9%E5%8B%92.md#1">巴特勒</a>对这份工作并不满意。2017年4月，他突发奇想，觉得既然假评论有市场，那咱弄一间假餐厅出来，是不是也会有市场呢？</p>
+<p>大家好，我是扶摇。欢迎和我一起探索未解之谜。</p>
+<p>今天先来给大家介绍一间神奇的网红餐厅，位于英国伦敦，名不见经传，却在开业短短半年后就登上了伦敦餐馆排行榜榜首之位。窜升速度之快，令人咂舌。而更令人不可思议的是，这间全伦敦最好的餐厅其实根本不存在。这是怎么回事呢？</p>
+<h2>网红餐厅养成记</h2>
+<p>餐厅主人巴特勒（Oobah Butler）是位自由作家，不过严格说来，是位网络写手，从事撰写假评论的工作。他称自己这份工作是“看着菜单，选个食物，然后开始撒谎”。可能因为文笔不错吧，每篇评论能为他赚取10英镑左右的收入，相当不错。</p>
+<p>不过巴特勒对这份工作并不满意。2017年4月，他突发奇想，觉得既然假评论有市场，那咱弄一间假餐厅出来，是不是也会有市场呢？</p>
 </p>
-<p><center><center><a title="YouTube video player" src=""></a><a href="https://db8nk66phkh66.cloudfront.net/Y0czFiy2x"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/aC0hIhjRICw" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></center>
-<p>真是个令人激动的想法呀。于是巴特勒卷起袖子，说干就干，跟杂志社合作，做起了假餐厅<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%9E%E9%AA%8C.md#1">实验</a>。而且他还给自己定了一个宏伟的目标，要做就做最好的，让这个假餐厅成为伦敦排名第一的餐厅。这有可能吗？巴特勒说，在这个充满了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A2%A6%E5%B9%BB.md#1">梦幻</a>的网络时代，万事皆有可能。</p>
+<p><center><center><a title="YouTube video player" src=""></a><a href="https://d8jw662akk94j.cloudfront.net/D9yda8bPo"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/aC0hIhjRICw" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></center>
+<p>真是个令人激动的想法呀。于是巴特勒卷起袖子，说干就干，跟杂志社合作，做起了假餐厅实验。而且他还给自己定了一个宏伟的目标，要做就做最好的，让这个假餐厅成为伦敦排名第一的餐厅。这有可能吗？巴特勒说，在这个充满了梦幻的网络时代，万事皆有可能。</p>
 <p>巴特勒的试验场是全球最大的网络旅游评论网站“猫途鹰”，TripAdvisor。按网站的要求，他给自己的餐厅起了个名字叫做杜尔维治小屋（The Shed at Dulwich），因为杜尔维治就是他住的那个小区的名字。接着注册商标，开通电话，电子邮箱，搭建网站。</p>
 <p>为了弄得神秘一点，也因为餐厅实际上根本就不存在嘛，所以网站上介绍说该餐厅原来只做私房小菜，现在决定对外营业，不过只接受预约，餐厅地址保密。至于菜单呢，设计也很特别。巴特勒宣称自己卖的是“心情”，而不仅仅是食物，总共有“爱”，“喜悦”，“沉思”等6种心情供挑选。配的食物也竭尽所能，故弄玄虚。比如用“猪颈肉配洋蓟和红酒木薯粉”体现“爱”的感觉；而在“舒适”这一款菜肴中，连菜碟都换成了上等的埃及棉做成的棉布碗。明白的人知道是在恶搞，不明白的人会觉得非常有创意。</p>
 <p>为了表现得更真实，巴特勒还特意上传了漂亮的餐点图片。不过这些图片都是用你意想不到的道具拍出来的，比如说，剃胡子用的泡沫膏，洗碗机洗涤剂。在一张照片中，他甚至连自己的脚后跟都用上了。不过这些照片总体来讲效果非常好。这些假食物看上去一个个优雅精致，充满了“高级感”。</p>
@@ -21,7 +23,7 @@
 <p>不过这不要紧。巴特勒轻车熟路，发动身边好友一起写起了假评论。大家统一口径，共同赞美餐厅的各大特色︰室外进餐、环境奇特、有家的感觉。最重要的是，在这里用餐不仅仅是味蕾的享受，更是“情绪”的释放，感受奇特，妙不可言。当然，顺便打个五星，那是必须的。</p>
 <p>在各类五星评语的加持下，餐厅排名直线上升，两个月后就挤进了排行榜前2000名。这时，第一通订餐电话打进来了。巴特勒措手不及，吓了一跳，临时扯了个谎，说未来六周都订满了。</p>
 <p>从此以后，来订餐的电话和邮件就络绎不绝了，全球各地都有。巴特勒以客满为由统统拒绝，甚至干脆就不接电话，搞起了“饥饿营销”。然而，这家从未营业的餐厅既没有被订不到位的食客投诉，也没有被TripAdvisor怀疑，排名还在一路飙升中。8月挺进200强，初冬进入前30名。2017年11月1日，一个值得纪念的日子，在诞生6个月后，这家创意奇特的餐厅窜升到了伦敦餐厅排行榜榜首的位置，并且在那里停留了3天，虽然到目前为止，还是一个食客都没招待过。</p>
-<p>居然半年功夫就圆满达成目标，简直不可思议。那下一步怎么走？<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%9E%E9%AA%8C.md#1">实验</a>结束，向大家坦白真相？巴特勒说，No,No,No，别急，游戏才刚刚开始。咱们接下来开门纳客，把造假进行到底。</p>
+<p>居然半年功夫就圆满达成目标，简直不可思议。那下一步怎么走？实验结束，向大家坦白真相？巴特勒说，No,No,No，别急，游戏才刚刚开始。咱们接下来开门纳客，把造假进行到底。</p>
 <p>那巴特勒是如何招待客人的，他又会不会穿帮呢？</p>
 <h2>假作真时真亦假</h2>
 <p>几天后，巴特勒挑了几位曾经来预约的客人，打电话约他们来享受免费晚餐，说是为了拍摄电视节目。得知自己被选上的客人们个个受宠若惊。其中有一位还非常惊讶地说了一句：“你们餐厅真的存在呀？”</p>
@@ -46,58 +48,48 @@
 <p>实验两轮后结束。总计大约3/4的人给出了错误答案。而在另外一组对照实验组中，在没有托儿故意扰乱的情况下，错误率只有1%。</p>
 <p>如果实验进入第三轮，大家觉得有多少人还能坚持选C呢？</p>
 <p>好，今天的故事就讲到这里了。随大流走或许不见得有什么不好，但“三人成虎”是一种警示，“阿希从众实验”也是一种警示，巴特勒的网红餐厅更是一种警示，就是我们有可能正生活在欺骗中，而我们却对此毫无察觉。有时候说出真相并不难，难就难在，如果我们周围的人都在撒谎，那我们还有没有勇气说出真相，或者，接受真相呢？</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>，我是扶摇，我们下期见。</p>
-<p>欢迎订阅Youmaker频道：<ahref=""></a><a href="https://db8nk66phkh66.cloudfront.net/Y0czFiy2x"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/UnsolvedMystery">"></a><a href="https://db8nk66phkh66.cloudfront.net/Y0czFiy2x"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/UnsolvedMystery</a><br />
-订阅频道YouTube频道：<ahref=""></a><a href="https://db8nk66phkh66.cloudfront.net/Y0czFiy2x"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ">"></a><a href="https://db8nk66phkh66.cloudfront.net/Y0czFiy2x"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ</a><br />
-订阅<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e6%9c%aa%e8%a7%a3%e4%b9%8b%e8%ac%8e.md#1">未解之谜</a>Telegram群组：<ahref="https://t.me/wjzmchannel">https://t.me/wjzmchannel</a></p>
-<p>【<ahref=""></a><a href="https://db8nk66phkh66.cloudfront.net/Y0czFiy2x"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ" target="_blank" rel="noopener noreferrer">未解之谜</a>】节目组制作</p>
+<p>未解之谜，我是扶摇，我们下期见。</p>
+<p>欢迎订阅Youmaker频道：<ahref=""></a><a href="https://d8jw662akk94j.cloudfront.net/D9yda8bPo"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/UnsolvedMystery">"></a><a href="https://d8jw662akk94j.cloudfront.net/D9yda8bPo"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/UnsolvedMystery</a><br />
+订阅频道YouTube频道：<ahref=""></a><a href="https://d8jw662akk94j.cloudfront.net/D9yda8bPo"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ">"></a><a href="https://d8jw662akk94j.cloudfront.net/D9yda8bPo"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ</a><br />
+订阅<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e6%9c%aa%e8%a7%a3%e4%b9%8b%e8%ac%8e.md#1">未解之谜</a>Telegram群组：<ahref="https://t.me/wjzmchannel">https://t.me/wjzmchannel</a></p>
+<p>【<ahref=""></a><a href="https://d8jw662akk94j.cloudfront.net/D9yda8bPo"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ" target="_blank" rel="noopener noreferrer">未解之谜</a>】节目组制作</p>
 <p>责任编辑：李梅 #</p>
-
 <hr>
-<hr>
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/8/n13797735.md#1">【未解之谜】摸骨高人：是人的不多了……</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/11/n13800409.md#1">【未解之谜】南极是地下世界入口？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/15/n13802645.md#1">【未解之谜】都市传说or真相？ 揭秘月球与登月计划</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/18/n13805592.md#1">【未解之谜】“与世隔绝”是一种怎样的体验</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/9/n13842023.md#1">【未解之谜】给凡妮莎的信（1）我们的世界是活的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/6/n13626065.md#1">一字师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/6/5/n13001963.md#1">【小宇宙传说】“他心通”存在？这有离奇故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/4/23/n12900882.md#1">美好的缘分 生命的奇迹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/20/n12200396.md#1">一个庶民家族的故事 (7)撑起半边天的那位女性</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/4/n12159940.md#1">一个庶民家族的故事 (6)没有半毛钱怎么过活? 祖父的活计</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/8/n13797735.md#1">【未解之谜】摸骨高人：是人的不多了……</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/11/n13800409.md#1">【未解之谜】南极是地下世界入口？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/15/n13802645.md#1">【未解之谜】都市传说or真相？ 揭秘月球与登月计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/18/n13805592.md#1">【未解之谜】“与世隔绝”是一种怎样的体验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268494.md#1">帮助别人 22年后 命运安排对方救了自己的儿子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265267.md#1">宽恕不是埋藏怨恨 而是不生怨恨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/21/n14230682.md#1">纽约曼哈顿一个报摊上发生的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/24/n14187818.md#1">团圆就是幸福</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/19/n14184021.md#1">异乡 A Foreign New Year</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180795.md#1">宽恕的力量</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/17/n10645382.md#1" target="_blank">严家伟：杀人越货丧尽天良的“土改”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">法轮大法洪传新西兰 20年点滴回顾</a></li><hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/15/n11261433.md#1" target="_blank">王维洛：孙越崎，学生领袖、煤油大王与三峡工程反对派的重要领军人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/2/n11494526.md#1" target="_blank">英国女士秘鲁探险 偶遇大法后改变人生</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13892027.md#1">他的才思从哪里来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898142.md#1">【舞蹈】美国飞天大学舞蹈系中国古典舞基本功考试 中班 男生（2022年12月）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897103.md#1">【十字路口】跨年特别节目：2022年世界之最</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897332.md#1">【微视频】各国警惕中共新毒株 世卫要数据</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/19/n13887450.md#1">七种商品不再有 今年Costco有哪几个变化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896722.md#1">【翻墙必看】传中共上将染疫 吃特效药身亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897095.md#1">岳山：习讲话不算数？七学者吁救民企 文章下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896835.md#1">台娱圈新年首发喜弹 翁立友“已登记”不宴客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897308.md#1">蒙古族歌王拉苏荣病亡 曾多次为中共党魁演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897346.md#1">港星万梓良现身大陆商演 步履不稳需众人搀扶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896444.md#1">李钟硕与IU公开恋情 已交往4个多月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896881.md#1">Aimer跨年宣布结婚喜讯 与飞内将大结成夫妻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896498.md#1">党媒终于承认染疫后遗症 心肌炎多发于中青年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897182.md#1">新年伊始 世界各地有哪些奇特的传统？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895971.md#1">【车评】比电动车更实用 2022 Lexus NX 450h+ F Sport Handling AWD</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894447.md#1">如何降低他汀类药物副作用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896892.md#1">出国旅游记住9招 让你免烦恼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285302.md#1">【晚间新闻】关岛逮两名中国偷渡客 判刑后遣返</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/24/n13671113.md#1">【声乐】神韵是希望（天丽演唱）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286395.md#1">【百年真相】陷害海外中国人 中共使一阴招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285314.md#1">沈舟：美军增派F-35到日本 中共难应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284584.md#1">持有多少现金储蓄最合适？专家解析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285328.md#1">搭机长途旅行太累 如何挑选最舒服经济舱座位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286463.md#1">孙俪自曝被夸“天选打工人” 帖文引两极论战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285313.md#1">汪明荃两度患癌 炎夏在冷气房穿冬装采排粤剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286087.md#1">《加菲猫：农场大冒险》优于旧作 7月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286069.md#1">为何飞机从起点到终点的飞行路线非一直线？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285219.md#1">只用微波炉 就能煮好玉米棒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251916.md#1">稳血糖又减肥 3运动摆脱糖尿病</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/8/22/n13807345.htm">【未解之谜】不存在的网红餐厅</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/8/22/n13807345.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/22/8/22/n13807345.htm">【未解之谜】不存在的网红餐厅</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/8/22/n13807345.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
